# Data_Privacy_Fianal_Project

./: .gitignore  README.md  main.py  pyproject.toml
NOTEBOOKS/: Cleaning and EDA.ipynb  Merged Data set.ipynb
OUTPUTS (Charts, Reports, Dashboards)/: Power point Presentation.pptx
